--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.12",
     "@heroicons/react": "^2.0.16",
+    "@react-three/drei": "^9.57.2",
     "@react-three/fiber": "^8.11.5",
     "@types/node": "18.14.2",
     "@types/react": "18.0.28",
