--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-dom": "18.0.11",
     "@types/three": "^0.149.0",
     "@vercel/analytics": "^0.1.11",
+    "dat.gui": "^0.7.9",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
     "next": "13.2.3",
