--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "@next/mdx": "^13.2.4",
     "@react-three/drei": "^9.57.2",
     "@react-three/fiber": "^8.11.5",
+    "@theatre/core": "^0.6.0",
+    "@theatre/r3f": "^0.6.0",
+    "@theatre/studio": "^0.6.0",
     "@types/node": "18.14.2",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
