--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mdx-js/loader": "^2.3.0",
     "@mdx-js/react": "^2.3.0",
     "@next/mdx": "^13.2.4",
+    "@prisma/client": "^4.12.0",
     "@react-three/drei": "^9.57.2",
     "@react-three/fiber": "^8.11.5",
     "@theatre/core": "^0.6.0",
@@ -39,6 +40,7 @@
     "@tailwindcss/typography": "^0.5.9",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
+    "prisma": "^4.12.0",
     "tailwindcss": "^3.2.7"
   }
 }
