--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "next": "13.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-p5": "^1.3.35",
     "rehype-highlight": "^6.0.0",
     "rehype-katex": "^6.0.2",
     "remark-math": "^5.1.1",
