--- a/package.json
+++ b/package.json
@@ -1,47 +1,33 @@
 {
-  "name": "sergen-karaoglan-portfolio",
-  "version": "0.1.0",
-  "private": true,
+  "name": "portfolio-astro",
+  "type": "module",
+  "version": "0.0.1",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "dev": "astro dev",
+    "start": "astro dev",
+    "build": "astro build",
+    "preview": "astro preview",
+    "astro": "astro"
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.12",
-    "@heroicons/react": "^2.0.16",
-    "@mdx-js/loader": "^2.3.0",
-    "@mdx-js/react": "^2.3.0",
-    "@next/mdx": "^13.2.4",
-    "@prisma/client": "^4.12.0",
-    "@react-three/drei": "^9.57.2",
-    "@react-three/fiber": "^8.11.5",
-    "@theatre/core": "^0.6.0",
-    "@theatre/r3f": "^0.6.0",
-    "@theatre/studio": "^0.6.0",
-    "@types/node": "18.14.2",
-    "@types/react": "18.0.28",
-    "@types/react-dom": "18.0.11",
-    "@types/three": "^0.149.0",
-    "@vercel/analytics": "^0.1.11",
-    "eslint": "8.35.0",
-    "eslint-config-next": "13.2.3",
-    "next": "13.2.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-p5": "^1.3.35",
-    "rehype-highlight": "^6.0.0",
-    "rehype-katex": "^6.0.2",
-    "remark-math": "^5.1.1",
-    "three": "^0.150.1",
-    "typescript": "4.9.5"
+    "@astrojs/image": "^0.16.9",
+    "@astrojs/mdx": "^0.19.3",
+    "@astrojs/react": "^2.2.0",
+    "@astrojs/tailwind": "^3.1.3",
+    "@heroicons/react": "^2.0.18",
+    "@react-three/drei": "^9.68.6",
+    "@react-three/fiber": "^8.13.0",
+    "@types/react": "^18.2.6",
+    "@types/react-dom": "^18.2.4",
+    "@types/three": "^0.152.0",
+    "@vercel/analytics": "^1.0.1",
+    "astro": "^2.5.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "tailwindcss": "^3.3.2",
+    "three": "^0.152.2"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.9",
-    "autoprefixer": "^10.4.13",
-    "postcss": "^8.4.21",
-    "prisma": "^4.12.0",
-    "tailwindcss": "^3.2.7"
+    "@tailwindcss/typography": "^0.5.9"
   }
 }
