--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/mdx": "^0.19.3",
     "@astrojs/react": "^2.2.0",
     "@astrojs/tailwind": "^3.1.3",
+    "@astrojs/vercel": "^3.4.0",
     "@heroicons/react": "^2.0.18",
     "@react-three/drei": "^9.68.6",
     "@react-three/fiber": "^8.13.0",
@@ -21,7 +22,7 @@
     "@types/react-dom": "^18.2.4",
     "@types/three": "^0.152.0",
     "@vercel/analytics": "^1.0.1",
-    "astro": "^2.5.3",
+    "astro": "^2.5.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwindcss": "^3.3.2",
