--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@astrojs/image": "^0.16.9",
     "@astrojs/mdx": "^0.19.3",
     "@astrojs/react": "^2.2.0",
+    "@astrojs/svelte": "^2.2.0",
     "@astrojs/tailwind": "^3.1.3",
     "@astrojs/vercel": "^3.4.0",
     "@heroicons/react": "^2.0.18",
@@ -22,9 +23,10 @@
     "@types/react-dom": "^18.2.4",
     "@types/three": "^0.152.0",
     "@vercel/analytics": "^1.0.1",
-    "astro": "^2.5.5",
+    "astro": "^2.5.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "svelte": "^3.59.1",
     "tailwindcss": "^3.3.2",
     "three": "^0.152.2"
   },
