--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "portfolio-astro",
+  "name": "sergen-karaoglan-portfolio",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
@@ -10,25 +10,22 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/image": "^0.16.9",
-    "@astrojs/mdx": "^0.19.3",
-    "@astrojs/react": "^2.2.0",
+    "@astrojs/mdx": "^0.19.5",
+    "@astrojs/react": "^2.2.1",
     "@astrojs/svelte": "^2.2.0",
     "@astrojs/tailwind": "^3.1.3",
-    "@astrojs/vercel": "^3.4.0",
-    "@heroicons/react": "^2.0.18",
-    "@react-three/drei": "^9.68.6",
+    "@astrojs/vercel": "^3.4.1",
+    "@react-three/drei": "^9.70.3",
     "@react-three/fiber": "^8.13.0",
-    "@types/react": "^18.2.6",
-    "@types/react-dom": "^18.2.4",
-    "@types/three": "^0.152.0",
-    "@vercel/analytics": "^1.0.1",
-    "astro": "^2.5.5",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "svelte": "^3.59.1",
-    "tailwindcss": "^3.3.2",
-    "three": "^0.152.2"
+    "@types/react": "^18.0.21",
+    "@types/react-dom": "^18.0.6",
+    "@types/three": "^0.152.1",
+    "astro": "^2.5.6",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "svelte": "^3.54.0",
+    "tailwindcss": "^3.0.24",
+    "three": "^0.153.0"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.9"
