--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/react-dom": "^18.0.6",
     "@types/three": "^0.152.1",
     "astro": "^2.5.6",
+    "babylonjs": "^6.6.0",
     "d3": "^7.8.5",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
