--- a/package.json
+++ b/package.json
@@ -11,23 +11,14 @@
   },
   "dependencies": {
     "@astrojs/mdx": "^0.19.5",
-    "@astrojs/react": "^2.2.1",
     "@astrojs/svelte": "^2.2.0",
     "@astrojs/tailwind": "^3.1.3",
     "@astrojs/vercel": "^3.4.1",
-    "@react-three/drei": "^9.70.3",
-    "@react-three/fiber": "^8.13.0",
-    "@types/react": "^18.0.21",
-    "@types/react-dom": "^18.0.6",
-    "@types/three": "^0.152.1",
     "astro": "^2.5.6",
     "babylonjs": "^6.6.0",
     "d3": "^7.8.5",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
     "svelte": "^3.54.0",
-    "tailwindcss": "^3.0.24",
-    "three": "^0.153.0"
+    "tailwindcss": "^3.0.24"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.9"
