--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/image": "^0.17.0",
     "@astrojs/mdx": "^0.19.5",
     "@astrojs/svelte": "^2.2.0",
     "@astrojs/tailwind": "^3.1.3",
     "@astrojs/vercel": "^3.4.1",
-    "astro": "^2.5.6",
+    "astro": "^2.6.2",
     "babylonjs": "^6.6.0",
     "d3": "^7.8.5",
     "svelte": "^3.54.0",
