--- a/package.json
+++ b/package.json
@@ -1,34 +1,29 @@
 {
-	"name": "sergen-karaoglan-portfolio-svelte",
-	"version": "0.0.1",
-	"private": true,
-	"scripts": {
-		"dev": "vite dev",
-		"build": "vite build",
-		"preview": "vite preview",
-		"lint": "prettier --plugin-search-dir . --check . && eslint .",
-		"format": "prettier --plugin-search-dir . --write ."
-	},
-	"devDependencies": {
-		"@sveltejs/adapter-auto": "^2.0.0",
-		"@sveltejs/kit": "^1.5.0",
-		"@tailwindcss/typography": "^0.5.9",
-		"autoprefixer": "^10.4.14",
-		"eslint": "^8.28.0",
-		"eslint-config-prettier": "^8.5.0",
-		"eslint-plugin-svelte": "^2.26.0",
-		"mdsvex": "^0.10.6",
-		"postcss": "^8.4.24",
-		"prettier": "^2.8.0",
-		"prettier-plugin-svelte": "^2.8.1",
-		"svelte": "^3.54.0",
-		"tailwindcss": "^3.3.2",
-		"vite": "^4.3.0"
-	},
-	"type": "module",
-	"dependencies": {
-		"@vercel/analytics": "^1.0.1",
-		"babylonjs": "^6.7.0",
-		"d3": "^7.8.5"
-	}
+  "name": "sergen-karaoglan-portfolio",
+  "type": "module",
+  "version": "0.0.1",
+  "scripts": {
+    "dev": "astro dev",
+    "start": "astro dev",
+    "build": "astro build",
+    "preview": "astro preview",
+    "astro": "astro"
+  },
+  "dependencies": {
+    "@astrojs/image": "^0.17.0",
+    "@astrojs/mdx": "^0.19.5",
+    "@astrojs/svelte": "^2.2.0",
+    "@astrojs/tailwind": "^3.1.3",
+    "@astrojs/vercel": "^3.4.1",
+    "astro": "^2.6.2",
+    "babylonjs": "^6.6.0",
+    "d3": "^7.8.5",
+    "tailwindcss": "^3.0.24"
+  },
+  "devDependencies": {
+    "@tailwindcss/typography": "^0.5.9",
+    "eslint": "^8.42.0",
+    "eslint-plugin-svelte": "^2.30.0",
+    "svelte": "^3.59.1"
+  }
 }
