--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,6 @@
 {"[svelte]": {
     "editor.formatOnSave": true,
     "editor.defaultFormatter": "svelte.svelte-vscode"
-  },}
+  },
+  "cSpell.language": "en-GB",
+}
