--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
 	"type": "module",
 	"dependencies": {
 		"@vercel/analytics": "^1.0.1",
-		"babylonjs": "^6.7.0",
+		"babylonjs": "^6.13.0",
+		"babylonjs-loaders": "^6.13.0",
 		"d3": "^7.8.5"
 	}
 }
